--- a/css/m4.css
+++ b/css/m4.css
@@ -13,7 +13,7 @@ body {
     word-wrap: break-word;
     font-weight: 400;
     background-color: #fff;
-    color: #7e7e7e;
+    color: #333333;
 }
 
 body::-webkit-scrollbar {
@@ -66,7 +66,7 @@ h6 {
     font-weight: 500;
     line-height: 1.3;
     font-family: "Poppins Bold";
-    color: #000;
+    color: #333333;
 }
 
 h1 {
@@ -263,7 +263,7 @@ h6 {
 
 .beny_tm_topbar ul li a {
     text-decoration: none;
-    color: #7E7E7E;
+    color: #333333;
     font-size: 16px;
     font-weight: 500;
     display: block;
@@ -612,6 +612,7 @@ h6 {
     border-radius: 6px;
     overflow: hidden;
     position: relative;
+    background-color: #ffcccb;
 }
 
 .beny_tm_button a .first {
@@ -846,7 +847,7 @@ h6 {
 }
 
 .beny_tm_about .list ul li p span {
-    color: #7e7e7e;
+    color: #333333;
     font-weight: 400;
 }
 
@@ -981,7 +982,7 @@ h6 {
     transform: translateY(-50%);
     transition: all 2s cubic-bezier(0.165, 0.840, 0.440, 1.000);
     /* IE 10+ */
-    color: #7E7E7E;
+    color: #333333;
     font-family: "Poppins";
     font-size: 16px;
 }
@@ -1071,7 +1072,7 @@ h6 {
 
 .beny_tm_resume .edu_list ul li p {
     font-size: 16px;
-    color: #7E7E7E;
+    color: #333333;
 }
 
 .beny_tm_resume .edu_list ul li p span {
@@ -1154,7 +1155,7 @@ h6 {
 
 .beny_tm_services ul li .learn_more {
     text-decoration: none;
-    color: #7E7E7E;
+    color: #333333;
     font-size: 18px;
     display: inline-block;
     position: relative;
@@ -1546,7 +1547,7 @@ h6 {
 
 .beny_tm_news ul li .details span a {
     text-decoration: none;
-    color: #7E7E7E;
+    color: #333333;
     position: relative;
     display: inline-block;
     -webkit-transition: all .3s ease;
@@ -1565,7 +1566,7 @@ h6 {
     content: ".";
     font-size: 40px;
     top: -3px;
-    color: #7e7e7e;
+    color: #333333;
     padding: 0px 5px;
 }
 
@@ -1645,7 +1646,7 @@ body.modal {
 
 .beny_tm_contact .short_list ul li a {
     text-decoration: none;
-    color: #7E7E7E;
+    color: #333333;
 }
 
 .beny_tm_contact .right {
@@ -1695,7 +1696,7 @@ body.modal {
     border-bottom: 1px solid #CBD3D9;
     background-color: transparent;
     font-size: 16px;
-    color: #7E7E7E;
+    color: #333333;
     font-weight: 500;
     font-family: 'DM Sans', sans-serif;
     padding-left: 0px !important;
@@ -1714,7 +1715,7 @@ body.modal {
     border-bottom: 1px solid #CBD3D9;
     background-color: transparent;
     font-size: 16px;
-    color: #7E7E7E;
+    color: #333333;
     font-weight: 500;
     font-family: 'DM Sans', sans-serif;
     height: 44px;
@@ -1811,6 +1812,8 @@ footer span {
     left: 17px;
     z-index: 2;
 }
+
+
 
 
 /*13) BENY CURSOR---------------------------------------------------*/
